# pySorts

./: .gitignore  LICENSE  README.md  app  app.py  buildCLib.sh  cSorts  cSorts.c  cli  compose.yml  dump.rdb  genDataSets.py  gen_data_sets.py  operation.py  plots.py  pySort.py  pyproject.toml  rebuild.sh  restart.sh  setup.cfg  setup.py  sorts  sorts.c  sorts.py  up.sh
.github/workflows/: test-backend.yml
.minReproducible/: build  minRep  minReproducible.c  minReproducible.py
backend/: Dockerfile.backend  compile.sh  pyproject.toml
backend/src/: arrays.py  backend_config.py  db_interface.py  main.py  sorter.py
backend/src/core/: backend_config.py
backend/src/main/: main.py
backend/src/sorter/: sorter.py
backend/src/sorts/: helpers.py
backend/src/sorts/python/: avl.py  python_sorts.py
backend/tests/: helpers.py  test_arrays.py  test_db_interface.py  test_routes.py  test_sorts.py
cli/: pyproject.toml  query_sortedness.json
cli/src/: cli.py  compare_algorithms.py  compare_sortedness.py  helpers.py
frontend/: .gitignore  Dockerfile.frontend  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.js  App.jsx  index.css  palette.json  theme.js
frontend/src/components/: Footer.jsx  Header.jsx  LineChart.jsx
frontend/src/scenes/about/: index.jsx
frontend/src/scenes/compareAlgorithms/: index.jsx
frontend/src/scenes/compareArrays/: index.jsx
frontend/src/scenes/dashboard/: index.jsx
frontend/src/scenes/global/: Sidebar.jsx  Topbar.jsx
frontend/src/scenes/graph/: index.jsx
frontend/src/scenes/previous/: index.jsx
gui/: check_tkinter.py  colour.py  graph_page.py  main.py  plot.py
src/UNKNOWN.egg-info/: SOURCES.txt
src/backend/: arrays.py  backend_config.py  config.py  db_interface.py  main.py  sorter.py
src/backend/sorts/: helpers.py
src/backend/sorts/c/: cSorts  cSorts.c
src/backend/sorts/c/cSorts.dSYM/Contents/: Info.plist
src/backend/sorts/c/cSorts.dSYM/Contents/Resources/DWARF/: cSorts
src/backend/sorts/c/cSorts.dSYM/Contents/Resources/Relocations/aarch64/: cSorts.yml
src/backend/sorts/python/: avl.py  python_sorts.py
src/cli/: cli.py  compare_algorithms.py  compare_sortedness.py
src/frontend/: package-lock.json  package.json
src/frontend/src/: App.js  index.css  theme.js
src/frontend/src/components/: LineChart.jsx
src/frontend/src/data/: mockData.js
src/frontend/src/scenes/about/: index.jsx
src/frontend/src/scenes/compareAlgorithms/: index.jsx
src/frontend/src/scenes/compareArrays/: index.jsx
src/frontend/src/scenes/faq/: index.jsx
src/frontend/src/scenes/global/: Sidebar.jsx  Topbar.jsx
src/frontend/src/scenes/graph/: index.jsx
src/frontend/src/scenes/previous/: index.jsx
src/gui/: compare_algorithms_page.py  compare_sortedness_page.py  feature_in_progress_page.py  graph_page.py  gui_config.py  main.py  plot.py  start_page.py
src/pthn/: cli.py
src/pthn/gui/: main.py
src/pthn/pySorts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/pySorts.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/python/: app.py  arrays.py  avl.py  cli.py  config.py  create_arrays.py  gen_data_sets.py  gui.py  main.py  operation.py  plot.py  sorter.py  sorter_old.py  sorts.py
src/python/backend/: config.py  main.py  query_algorithms.json  setup.py  sorter.py  sorts.py
src/python/cli/: cli.py  compare_algorithms.py  compare_sortedness.py  helpers.py
src/python/gui/: compare_algorithms_page.py  compare_sortedness_page.py  config.py  feature_in_progress_page.py  graph_page.py  main.py  plot.py  start_page.py
src/python/gui_practice/: altGui.py  altgui2.py  gui.py
src/python/pySorts.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: array_gen_test.py  helpers.py  sorts_test.py  test_arrays.py  test_db_interface.py  test_routes.py  test_sorts.py  validation_test.py
