[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pySorts"
version = "0.0.1"
description = "An application that compares sorting algorithm implementations by language and algorithm."
authors = [{name = "Jon Atkinson", email = "95665780+jon-atkinson@users.noreply.github.com"}]
license = {text = "MIT"}

dependencies = [
    "matplotlib",
    "numpy"
]

[project.optional-dependencies]
dev = ["unittest"]

[project.scripts]
pySortsApp = "pthn.gui.main:main"
pySortsCli = "pthn.cli:runCLI"