[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pySorts"
version = "0.0.1"
description = "An application that compares sorting algorithm implementations by language and algorithm."
readme = "README.md"
license = {text = "MIT"}
keywords = ["sort", "sorts", "sorting", "complexity", "example", "teach", "learn"]
authors = [{name = "Jon Atkinson", email = "95665780+jon-atkinson@users.noreply.github.com"}]
dependencies = ["matplotlib", "numpy", "fastapi[standard]", "requests"]
requires-python = ">=3.11"

[project.scripts]
pySortsApp = "src.gui.main:main"
pySortsCli = "src.cli.cli:runCLI"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["backend", "cli", "gui"]

[tool.setuptools.package-data]
"backend.sorts.c" = ["cSorts.so"]
