[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pySorts-cli"
version = "0.0.1"
description = "The pySorts cli interface."
license = {text = "MIT"}
keywords = ["sort", "sorts", "sorting", "complexity", "example", "teach", "learn"]
authors = [{name = "Jon Atkinson", email = "95665780+jon-atkinson@users.noreply.github.com"}]
dependencies = ["requests"]
requires-python = ">=3.11"

[project.scripts]
cli = "src.cli:runCLI"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
]

[tool.setuptools]
packages = ["src", "tests"]

[tool.setuptools.package-data]
"sorts.c" = ["cSorts.so"]
